--- a/05-EstudiosAnaliticos.ipynb
+++ b/05-EstudiosAnaliticos.ipynb
@@ -1638,7 +1638,7 @@
    "source": [
     "# Relación <span style=\"color:green\"> Numérica x Numérica </span>\n",
     "\n",
-    "En esta sección nos planteamos si dos variables cuantitativas están relacionas y de qué manera, para ello vamos a generar datos sintéticos y analizar sus propiedades. \n",
+    "En esta sección nos planteamos si dos variables cuantitativas están relacionadas y de qué manera, para ello vamos a generar datos sintéticos y analizar sus propiedades. \n",
     "\n",
     "El modelo de regresión simple utiliza una única variable predictora/independiente/explicativa para intentar explicar otra variable dependiente/explicada. El modelo de regresión lineal puede escribirse como:\n",
     "\n",
@@ -2358,7 +2358,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## Diagnóstico del modelo Modelo II\n",
+    "## Diagnóstico del Modelo II\n",
     "***"
    ]
   },
@@ -3559,7 +3559,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -3573,7 +3573,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.7.7"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
