--- a/05-EstudiosAnaliticos.ipynb
+++ b/05-EstudiosAnaliticos.ipynb
@@ -600,7 +600,7 @@
    "source": [
     "### Interpretación de los resultados\n",
     "\n",
-    "Hay una asociación/relación estadísticamente significativa entre el tratamiento y la mejora del paciente $\\chi^2 (2) = 13.055$, $p-valor = 0.0014 < \\alpha = 0.01$. La fortaleza de esa relación es pequeña, la V de Cramer = 0.3942. Por tanto, sería necesario realizar test post hoc entre los grupos para detectar dónde están las diferencias (__análsis de subgrupos__).\n",
+    "Hay una asociación/relación estadísticamente significativa entre el tratamiento y la mejora del paciente $\\chi^2 (2) = 13.055$, $p-valor = 0.0014 < \\alpha = 0.01$. La fortaleza de esa relación es pequeña, la V de Cramer = 0.3942 (está entre 0 y 1 por definición). Por tanto, sería necesario realizar test post hoc entre los grupos para detectar dónde están las diferencias (__análisis de subgrupos__).\n",
     "\n",
     "Realizaremos un análisis de subgrupos mediante múltiples tests Chi-cuadrado 2x2 utilizando el p-valor ajustado de Bonferroni. Este ajuste de Bonferroni es necesario porque comparar multiples niveles (categorías) una contra otra, el error de falso positivo se multiplica por cada test, es decir, si el primer test el falso positivo es 0.05 (5%), después de realizar el segundo test tendremos un 10% de posibilidades de falso positivo, y así sucesivamente. En nuestro caso, al realizar 3 test Chi-cuadrado 2x2 (Marked, None, Some), consideraremos nuestro nivel de significación $0.05/3=0.017$. Así pues, para que un par sea significativo, el p-valor debe ser menor de 0.017.\n",
     "\n",
