--- a/05-EstudiosAnaliticos.ipynb
+++ b/05-EstudiosAnaliticos.ipynb
@@ -2176,7 +2176,7 @@
     "### Antes de seguir ... ¿hay datos que estén influenciando la regresión?\n",
     "\n",
     "\n",
-    "* Dato atípico (outlier): una observación con un residuo muy grande, es decir, se separa mucho de la nuebe de puntos.\n",
+    "* Dato atípico (outlier): una observación con un residuo muy grande, es decir, se separa mucho de la nube de puntos.\n",
     "* Puntos de apalancamiento: puntos con un valor $x$ muy lejano a la media de $X$.\n",
     "* Observaciones de influencia: observaciones que hacen variar la pendiente de la línea de regresión.\n",
     "\n"
