Replace Bayesian notebooks

--- a/TareaAnálisisEstadístico.ipynb
+++ b/TareaAnálisisEstadístico.ipynb
@@ -86,7 +86,7 @@
    "source": [
     "### __Etapa 3__\n",
     "\n",
-    "En esta etapa se os pide que comparéis la decisión tomada con el t-test del ejercicio anterior (Etapa 2) con la decisión que tomaríais al utilizar un modelo jerárquico Bayesiano. Para ello tendréis que cortar y pegar el código de la sección __Sustituyendo el contraste para dos poblaciones independientes por la inferencia Bayesiana__ en el notebook 06-InferenciaBayesiana.ipynb, y obtener un intervalo plausible al 95% de probabilidad (95% HDP) para la diferencia de medias en vuestros datos."
+    "En esta etapa se os pide que comparéis la decisión tomada con el t-test del ejercicio anterior (Etapa 2) con la decisión que tomaríais al utilizar un modelo jerárquico Bayesiano. Para ello tendréis que adaptar el código de la sección __Sustituyendo el contraste para dos poblaciones independientes por la inferencia Bayesiana__ en el notebook 08-Contraste_hipotesis_vs_inferencia_Bayesiana.ipynb, y obtener un intervalo plausible al 95% de probabilidad (95% HDP) para la diferencia de medias en vuestros datos."
    ]
   }
  ],
@@ -106,7 +106,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.10.13"
   }
  },
  "nbformat": 4,
