--- a/TareaAnálisisEstadístico.ipynb
+++ b/TareaAnálisisEstadístico.ipynb
@@ -6,7 +6,7 @@
    "source": [
     "# Entrega del módulo 2. Aprendizaje estadístico.\n",
     "\n",
-    "## <font color=\"red\"> Fecha límite 17 de diciembre de 2023 </font>\n",
+    "## <font color=\"red\"> Fecha límite 7 de enero de 2024 </font>\n",
     "\n",
     "La entrega de la práctica del módulo de aprendizaje estadístico se divide en tres etapas. Las etapas van de menos a más en términos de dificultad, y el hecho de pasarlas hará que se consigan más puntos en la nota final.\n",
     "\n",
@@ -106,7 +106,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.13"
+   "version": "3.10.12"
   }
  },
  "nbformat": 4,
