Dos ejercicios y un aviso añadidos

--- a/Sesión práctica 1.ipynb
+++ b/Sesión práctica 1.ipynb
@@ -24,6 +24,20 @@
     "\n",
     "* En este apartado os pido que contestéis a la pregunta de si hay un clasificador significativamente mejor que el otro y cuál es. Obviamente, conocéis la respuesta, pero yo os pido que respondáis a la pregunta a partir de los datos sintéticos que habéis generado y mediante un contraste de hipótesis.\n",
     "\n",
+    "## Sesión práctica 2\n",
+    "\n",
+    "**En la prueba de evaluación PEC y dado que no dio tiempo a ver con suficiente calma los modelos jerárquicos Bayesianos, basta con que contestéis a la pregunta con un modelo Bayesiano plano (no jerárquico).**\n",
+    "\n",
+    "### Ejercicio 4:\n",
+    "\n",
+    "* Trabajamos en un departamento de venta y proponemos un cambio en el protocolo de atención al cliente. Para tomar la decisión de si implementarlo definitivamente, realizamos una prueba con el nuevo protocolo para una muestra de $N_1$=100 personas, registramos cuántas de éstas deciden comprar un producto. Resulta que 20 personas lo hicieron. De la experiencia previa al diseño del nuevo protocolo tenemos un registro de $N_2$=2000 personas de las cuales 385 realizaron compra.\n",
+    "\n",
+    "¿Podemos decir que el nuevo protocolo resulta en una mejora estadísticamente significativa de las tasas de venta? ¿Cómo cambiaría el resultado si, manteniendo el porcentaje del 20% de venta para el nuevo protocolo, aumentamos el valor de $N_1$ a 2000 personas? ¿Y si ambos, $N_1$ y $N_2$, aumentan a 5000 o 10000?\n",
+    "\n",
+    "\n",
+    "### Ejercicio 5\n",
+    "\n",
+    "* Para los datos generados en el ejercicio 1, responder a la pregunta sobre la igualdad en las tasas de acierto de los clasificadores empleando un modelo Bayesiano.\n",
     "\n",
     "\n",
     "\n"
