--- a/Sesión práctica 1.ipynb
+++ b/Sesión práctica 1.ipynb
@@ -18,7 +18,7 @@
     "\n",
     "### Ejercicio 2: Intervalos de confianza para la tasa promedio de acierto de cada clasificador.\n",
     "\n",
-    "En este segundo ejercicio, os pido que proporcionéis la tasa media de acierto de cada clasificador y su intervalo de confianza al 5% de confianza. \n",
+    "En este segundo ejercicio, os pido que proporcionéis la tasa media de acierto de cada clasificador y su intervalo de confianza al 5%. \n",
     "\n",
     "### Ejercicio 3: Selección del mejor clasificador\n",
     "\n",
@@ -60,7 +60,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.12"
+   "version": "3.11.4"
   }
  },
  "nbformat": 4,
